Opened 16 years ago
Closed 16 years ago
#1008 closed bug (fixed)
Page Setup / Print Setup fails to open
Reported by: | laplace | Owned by: | laplace |
---|---|---|---|
Priority: | blocker | Milestone: | R1 |
Component: | Printing | Version: | R1/pre-alpha1 |
Keywords: | Cc: | bonefish, axeld | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
In StyledEdit the page setup dialog can be opened once. Subsequent attempts to open the page setup or print dialog fail because StyledEdit (actually BPrintJob) does not get a valid BMessenger to the print_server.
(The print server must be running. E.g. add a printer via the Printers preflet before.)
Change History (3)
comment:1 by , 16 years ago
Cc: | added |
---|
comment:2 by , 16 years ago
Cc: | added |
---|---|
Description: | modified (diff) |
I've tracked the problem down to the point that a reply port reused for synchronous messaging happens to be not empty, so that the BRoster::GetAppInfo() invoked by the BMessenger constructor gets the wrong reply from the registrar.
Uncommenting the #if 0'd check code in the synchronous BMessage::_SendMessage() triggers the debugger (even earlier, when trying to open the File menu the second time).
I wouldn't completely rule out, that the bug is in the StyledEdit or printing code, but it seems very likely that the app kit is to blame. So I throw axeld into the CC for good measure. :-P
Ingo do you know what is going on here?