* In the BMessage assignment operator we do now clear some of the message   header flags after copying the header of the original message. Before   cloning a message that still needed a reply would result in the clone   also needing a reply, which, in the end, led to two replies being sent,   thus screwing up the cached reply ports used for synchronous messaging.   Fixes bug #1008.   BTW, also clearing the reply info breaks Tracker and Deskbar, so I suppose   R5 keeps it and Tracker and Deskbar rely on that behavior.

* Added a bit of debug code removing and printing spurious messages from a
  cached reply port.

* Added TODO in BMessage::~BMessage(). ATM, we only send a B_NO_REPLY in the
  destructor, but not in case the message is overwritten using the
  assignment operator or Flatten().



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20074 a95241bf-73f2-0310-859d-f6bbb57e9c96